--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"next": "^14.2.16",
 		"next-intl": "^3.23.5",
 		"next-mdx-remote": "^5.0.0",
+		"pino-pretty": "^11.3.0",
 		"postcss": "^8.4.39",
 		"postcss-preset-env": "^9.5.15",
 		"react": "^18.3.1",
@@ -37,6 +38,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"eslint": "^9.13.0",
 		"postcss-custom-media": "^10.0.7",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"typescript": "^5"
